# NL-NumEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  NOTICE.md  README.md  build.sh  main.cpp  settings.json
doxygen/: header.html
include/: Interpreter.h  Lexer.h  Matrix.h  Parser.h  Token.h
scripts/: build.sh  clang-tidy.sh  common-header.sh  coverage.sh  doxygen.sh  format.sh  install-deps.sh  run.sh  run_test.sh  test.sh
src/: Interpreter.cpp  Lexer.cpp  Parser.cpp
tests/: test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_matrix.cpp  test_parser.cpp
